cmake_minimum_required(VERSION 3.24)
project(untitled1)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled1
        main.cpp
        main1.cpp
        circularLL.cpp
        doubleLL.cpp
        linkedList.cpp
        nodeLL.cpp
        nodeDLL.cpp
        Stack.cpp
        Stack.h
        circularLL.h
        linkedList.h
        doubleLL.h
        Queue.cpp Queue.h AVLTree.cpp AVLTree.h nodeTree.cpp priorityQueue.cpp priorityQueue.h)
